--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <title>Budget Tracker</title>
 </head>
 <body id="b1">
-  <div class="wrapper">
+  <div id="wrapper" class="wrapper">
     <div class="total">
       <div class="total">Your total is: $<span id="total">0</span></div>
     </div>
@@ -21,8 +21,10 @@
     <div class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
       <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <div id="btn-wrap">
+        <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
+        <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      </div>
       <p class="error"></p>
     </div>
 
