--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
       <input type="text" id="t-name" placeholder="Name of transaction" />
       <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
       <div id="btn-wrap">
-        <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-        <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+        <button id="add-btn" title="Earnings or any type of financial gain"><i class="fa fa-plus buttons"></i> Add Funds</button>
+        <button id="sub-btn" title="Spending or any type of financial loss"><i class="fa fa-minus"></i> Subtract Funds</button>
       </div>
       <p class="error"></p>
     </div>
@@ -36,16 +36,16 @@
           <th>Amount</th>
         </thead>
         <tbody id="tbody">
-          
+
         </tbody>
       </table>
     </div>
-    
+
     <canvas id="myChart"></canvas>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
- 
+
   <script src="index.js"></script>
   <script src="/db.js"></script>
   <script>
@@ -57,6 +57,6 @@
       });
     }
   </script>
-  
+
 </body>
 </html>
